# distributions

./: .gitignore  Cargo.toml  README.md
src/: gaussian.rs  lib.rs  uniform.rs
